# Vimarsha

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md
app/: README.md  analysis_options.yaml  pubspec.yaml
app/lib/: app.dart  main.dart
app/lib/core/: providers.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: app_boot_test.dart
app/test/core/: providers_test.dart  providers_ui_test.dart
app/test/support/: fake_audio_handler.dart  fake_backend_client.dart  fake_recorder_handler.dart
app/test_integration/: README.md  real_backend_test.dart
apple/: CLAUDE.md  Info.plist
apple/Config/: Info.plist  Vimarsha.entitlements
apple/Vimarsha/: VimarshaApp.swift
apple/Vimarsha.xcodeproj/: project.pbxproj
apple/Vimarsha/Audio/: AudioEngine.swift  RecorderEngine.swift
apple/Vimarsha/Backend/: BackendClient.swift  ChapterBundle.swift  ChapterDownloader.swift
apple/Vimarsha/Debug/: DiscussLoopRepro.swift
apple/Vimarsha/Design/: BandContrast.swift  Palette.swift  SafeArea.swift
apple/Vimarsha/Discuss/: ChatContextSnapshot.swift  ChatStore.swift  ConversationsListView.swift  DiscussPanelView.swift  DiscussPlaneView.swift  ReplySpeaker.swift  VoiceInput.swift
apple/Vimarsha/Import/: EpubCover.swift  EpubImporter.swift  ZipArchive.swift
apple/Vimarsha/Persistence/: Models.swift
apple/Vimarsha/Player/: MemoCapture.swift  MemoNotes.swift  NowPlaying.swift  PlayerController.swift
apple/Vimarsha/Reading/: FigureCarrierView.swift  FigureOverlaySelection.swift  FigureViewerView.swift  FiguresGalleryView.swift  MemoNotesView.swift  MemoPuckView.swift  MemoRecordControl.swift  ReadingBlocksView.swift  ReadingSurfaceView.swift  TimingIndex.swift  Transport.swift  TransportClusterView.swift
apple/Vimarsha/Resources/: StolenFocus.epub
apple/Vimarsha/Surface/: BookSession.swift  Surface.swift  SurfaceCoordinator.swift  SurfaceSnapshot.swift
apple/VimarshaTests/: AVFoundationAudioEngineTests.swift  BackendClientTests.swift  BandContrastTests.swift  BookFocusSnapshotTests.swift  BookFocusTests.swift  BookSessionTests.swift  CardGeometryTests.swift  CardVisualTopTests.swift  ChapterDownloaderTests.swift  ChapterListSnapshotTests.swift  ChapterRowStaleTests.swift  ChapterStalenessTests.swift  ChatBackendTests.swift  ChatContextSnapshotTests.swift  ChatPersistenceTests.swift  ChatStoreTests.swift  ControlClusterSnapshotTests.swift  ControlClusterTests.swift  ConversationsListSnapshotTests.swift  CoverArtTests.swift  DebossDodgeTests.swift  DiscussPanelSnapshotTests.swift  EpubCoverTests.swift  EpubImporterTests.swift  EpubInfoTests.swift  FakeAudioEngine.swift  FakeBackendClient.swift  FakeRecorderEngine.swift  FigureCarrierSnapshotTests.swift  FigureOverlayModelTests.swift  FiguresGallerySnapshotTests.swift  FocusAffordancePlacementTests.swift  HardbackCoverArtSnapshotTests.swift  HardbackCoverDebossFitSnapshotTests.swift  HardbackCoverDodgeSnapshotTests.swift  HardbackCoverTitleFadeSnapshotTests.swift  HeaderContrastSnapshotTests.swift  HeaderContrastTests.swift  HeroSettleTests.swift  LensingPuckSnapshotTests.swift  (+28 more)
apple/docs/reference/: ref-books-video-analysis.md
backend/: .dockerignore  Dockerfile  Dockerfile.serverless  README.md  pyproject.toml
backend/docs/: manual-tts-smoke.md  runpod.md
backend/flash/: .gitignore  README.md  deploy.sh  narrate_worker.py  pyproject.toml
backend/scripts/: export_schema.py
backend/serverless/: rp_handler.py
backend/serverless/t3-model/: config.json
backend/src/vimarsha/: __init__.py  arxiv_ingest.py  audio_io.py  block_parser.py  chatterbox_batch.py  epub_reader.py  figure_images.py  figure_registry.py  ingest.py  llm.py  math_speech.py  mention_detector.py  metadata.py  models.py  narrate.py  remote_narrator.py  runpod_client.py  server.py  stitch.py  transcribe.py  tts.py
backend/tests/: conftest.py  fakes.py  test_arxiv_ingest.py  test_audio_io.py  test_batch_synth.py  test_block_parser.py  test_chapter_titles.py  test_chatterbox_preset.py  test_chunk_text.py  test_epub_reader.py  test_figure_images.py  test_figure_registry.py  test_ingest.py  test_math_speech.py  test_mention_detector.py  test_metadata.py  test_models.py  test_narrate.py  test_narrate_batched.py  test_premium_routing.py  test_remote_narrator.py  test_rp_handler.py  test_runpod_client.py  test_server.py  test_server_chat.py  test_server_image.py  test_server_speak.py  test_server_storage.py  test_server_toc.py  test_server_transcribe.py  test_server_upload.py  test_stitch.py  test_tts_engine.py
docs/superpowers/: 2026-06-28-discuss-hang-handoff.md  2026-06-29-discuss-return-state-handoff.md
docs/superpowers/plans/: 2026-06-03-plan1-backend-ingestion.md  2026-06-03-plan2-backend-narration.md  2026-06-06-plan3a-client-scaffold-storage.md  2026-06-06-plan3b-client-data-layer.md  2026-06-07-plan3c-client-ui.md  2026-06-08-plan4b-reading-ui.md  (+11 more)
plan/: README.md
plan/00-overview/: README.md  decision-log.md  glossary.md
plan/01-product/: feature-list.md  personas-jobs.md  product-spec.md  roadmap.md  user-stories.md
plan/02-market/: competitive-analysis.md  positioning.md  pricing-benchmark.md
plan/03-design/: accessibility.md  design-principles.md  design-system.md  motion-grammar.md  naming.md  references.md  screen-flows.md  sound-design.md
plan/04-architecture/: app-architecture.md  conversation-ai.md  data-model.md  figure-intelligence.md  hosted-backend.md  narration-pipeline.md  privacy-security.md  tech-stack.md
plan/05-monetization/: monetization.md
plan/06-content-pipeline/: epub-compatibility.md  figure-accuracy.md
plan/07-gtm/: aso-assets.md  go-to-market.md  marketing-messaging.md
plan/08-engineering/: V09-motion-review.md  _progress-A.md  build-plan.md  build-roadmap.md  final-review-checklist.md  open-questions.md  runpod-cost-and-buy-trigger.md  ui-audit-log.md
scripts/agent-loop/: README.md  prompt.md  run.sh  ui-audit-prompt.md
shared/: bundle.schema.json
shared/fixtures/: sample-chapter.bundle.json  sample.epub
(+80 files in other folders)
