[project]
name = "vimarsha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.136.3",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
tts = [
    "chatterbox-tts",
    "setuptools<81",
    "torch",
    "torchaudio",
]

[project.scripts]
vimarsha = "vimarsha:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/vimarsha"]
