[project]
name = "vimarsha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    # Lower bound kept broad so the serverless (vLLM) resolution can pick numpy<2.3, which
    # vLLM 0.10 requires; default/tts/kokoro still resolve to a modern numpy.
    "numpy>=1.24",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
tts = [
    "chatterbox-tts",
    "faster-whisper",
    "setuptools<81",
    "torch",
    "torchaudio",
]
# Alternative narration engine (faster, lighter than Chatterbox). Select at runtime with
# VIMARSHA_TTS=kokoro. `misaki[en]` is Kokoro's English G2P; faster-whisper is kept so
# /transcribe still works on the Kokoro-only stack.
kokoro = [
    "kokoro>=0.9",
    "misaki[en]>=0.9",
    "faster-whisper",
    "torch",
    "torchaudio",
    "soundfile",
]
# The RunPod serverless worker image (Chatterbox narration only). Mirrors `tts` minus the
# Whisper STT dep, plus the RunPod SDK that runs the handler. Installed in Dockerfile.serverless.
serverless = [
    # The worker narrates batched via VllmChatterboxSynth (chatterbox-vllm) — NOT base
    # chatterbox-tts, which conflicts with the port's pinned deps and is never constructed here.
    # vLLM is pulled transitively by chatterbox-vllm (it pins its own compatible vLLM — 0.10.0
    # as of port 0.2.1); don't double-pin it here or the resolver conflicts.
    "torch",
    "torchaudio",
    "runpod>=1.6",
    "chatterbox-vllm",
]

[tool.uv.sources]
chatterbox-vllm = { git = "https://github.com/randombk/chatterbox-vllm" }

# The serverless worker image (chatterbox-vllm / vLLM) and the local tts image (chatterbox-tts)
# pin incompatible deps and are never installed together — tell uv to resolve them separately.
[tool.uv]
conflicts = [
    [{ extra = "tts" }, { extra = "serverless" }],
]

[project.scripts]
vimarsha = "vimarsha:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/vimarsha"]
