[project]
name = "vimarsha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "numpy>=1.24",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
tts = [
    "chatterbox-tts",
    "faster-whisper",
    "setuptools<81",
    "torch",
    "torchaudio",
]
# Alternative narration engine (faster, lighter than Chatterbox). Select at runtime with
# VIMARSHA_TTS=kokoro. `misaki[en]` is Kokoro's English G2P; faster-whisper is kept so
# /transcribe still works on the Kokoro-only stack.
kokoro = [
    "kokoro>=0.9",
    "misaki[en]>=0.9",
    "faster-whisper",
    "torch",
    "torchaudio",
    "soundfile",
]
# Whisper STT only (memo transcription). Lightweight: faster-whisper rides CTranslate2, NOT
# torch, so the premium backend (Chatterbox narration runs remotely on RunPod) can serve
# /transcribe without the heavy `tts`/`kokoro` stacks. Run the dev backend with `--extra stt`.
stt = [
    "faster-whisper",
]
# Scientific Literature ingestion: parse arXiv LaTeX source into narratable text + equation
# blocks (pylatexenc — pure Python, no system TeX). PDF papers use Z.AI GLM OCR (no extra dep).
papers = [
    "pylatexenc>=2.10",
]
# The RunPod serverless worker image (Chatterbox narration only). Mirrors `tts` minus the
# Whisper STT dep, plus the RunPod SDK that runs the handler. Installed in Dockerfile.serverless.
# Real sequential chatterbox-tts (the vLLM batched port mangled the audio — removed).
serverless = [
    "chatterbox-tts",
    "setuptools<81",
    "torch",
    "torchaudio",
    "runpod>=1.6",
]

[project.scripts]
vimarsha = "vimarsha:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/vimarsha"]
